--- a/dockerfiles/proxy/nginx.conf
+++ b/dockerfiles/proxy/nginx.conf
@@ -8,9 +8,9 @@ http {
   client_max_body_size 200M;
 
   server {
-    listen 8080;
+    listen 80;
 
-    location / {
+    location /transmission {
       proxy_pass http://transmission:9091;
       proxy_set_header Host $http_host;
       proxy_set_header X-Real-IP $remote_addr;
@@ -21,6 +21,42 @@ http {
       proxy_http_version 1.1;
       proxy_set_header Connection "";
     }
+
+    location /portainer {
+      proxy_pass http://portainer:9000;
+      proxy_set_header Host $http_host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+
+      # HTTP 1.1 support
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
+    }
+
+    location /grafana {
+      proxy_pass http://grafana:3000;
+      proxy_set_header Host $http_host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+
+      # HTTP 1.1 support
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
+    }
   }
+
+    location /domoticz {
+      proxy_pass http://domoticz:8080;
+      proxy_set_header Host $http_host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+
+      # HTTP 1.1 support
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
+    }
 
 }
