--- a/dockerfiles/proxy/nginx.conf
+++ b/dockerfiles/proxy/nginx.conf
@@ -6,9 +6,13 @@ http {
 
   # In case of big files
   client_max_body_size 200M;
+  include /etc/nginx/mime.types;
+  default_type application/octet-stream;
 
   server {
-    listen 80;
+    listen 8080;
+    root /usr/share/nginx/www;
+    index index.html index.htm;
 
     location /transmission {
       proxy_pass http://transmission:9091;
@@ -22,41 +26,29 @@ http {
       proxy_set_header Connection "";
     }
 
-    location /portainer {
-      proxy_pass http://portainer:9000;
-      proxy_set_header Host $http_host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-
-      # HTTP 1.1 support
+    location /portainer/ {
       proxy_http_version 1.1;
       proxy_set_header Connection "";
+      proxy_pass http://portainer:9000/;
     }
 
-    location /grafana {
-      proxy_pass http://grafana:3000;
-      proxy_set_header Host $http_host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
+    location /portainer/ws/ {
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_pass http://portainer:9000/ws/;
+  }
 
-      # HTTP 1.1 support
+    location /grafana/ {
+      proxy_pass http://grafana:3000/;
+    }
+
+    location /domoticz/ {
+      proxy_pass http://domoticz:8080/;
+
       proxy_http_version 1.1;
       proxy_set_header Connection "";
     }
   }
-
-    location /domoticz {
-      proxy_pass http://domoticz:8080;
-      proxy_set_header Host $http_host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-
-      # HTTP 1.1 support
-      proxy_http_version 1.1;
-      proxy_set_header Connection "";
-    }
 
 }
