--- a/dockerfiles/docker-compose.yml
+++ b/dockerfiles/docker-compose.yml
@@ -2,24 +2,114 @@ version: '3'
 
 services:
   nordvpn:
-    container_name: nordvpn
-    image: pakalucki/nordvpn:latest_armv7
+    image: pakalucki/nordvpn
     ports: 
       - "1194:1194/udp"
     environment:
-      username: pakalucki@gmail.com
+      username: ${NORDVPN_USER}
       password: ${NORDVPN_PASSWORD}
       protocol: udp
     devices:
-      - "/dev/net/tun:/dev/net/tun"
+      - "/dev/net/tun"
     cap_add:
       - NET_ADMIN
+    command: bg30
+
+  proxy:
+    image: pakalucki/proxy
+    ports:
+      - "8443:443"
 
   portainer:
-  samba:
+    image: portainer/portainer
+    networks:
+      - service:proxy
+    ports:
+      - "8000:8000"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - portainer_data:/data
+    depends_on:
+      - "proxy"
+
   transmission:
+    image: linuxserver/transmission:arm32v7-latest
+    volumes:
+      - ${HOST_DIR}/public/torrent/config:/config
+      - ${HOST_DIR}/public/torrent/downloads:/downloads
+      - ${HOST_DIR}/public/torrent/watch:/watch
+    networks:
+      - service:nordvpn
+      - service:proxy
+    environment:
+      TZ: "Europe/Warsaw"
+      USER: ${TRANSMISSION_USER}
+      PASS: ${TRANSMISSION_PASS}
+    depends_on:
+      - "proxy"
+      - "nordvpn"
+
   influxdb:
+    image: influxdb
+    volumes:
+      - ${HOST_DIR}/influxdb:/var/lib/influxdb
+    networks:
+      - monitoring
+    environment:
+      INFLUXDB_DB: db0
+      INFLUXDB_ADMIN_USER: ${INFLUXDB_ADMIN_USER}
+      INFLUXDB_ADMIN_PASSWORD: ${INFLUXDB_ADMIN_PASSWORD}
+      INFLUXDB_USER: ${INFLUXDB_USER} 
+      INFLUXDB_USER_PASSWORD: ${INFLUXDB_USER_PASSWORD}
+
   grafana:
+    image: grafana/grafana
+    volumes:
+      - ${HOST_DIR}/grafana:/var/lib/grafana
+    networks:
+      - service:proxy
+      - monitoring
+    environment:
+      GF_SERVER_DOMAIN: grafana
+      GF_SERVER_ROOT_URL: "%(protocol)s://%(domain)s/grafana/"
+    depends_on:
+      - "proxy"
+      - "influxdb"
+
   telegraf:
+    image: pakalucki/telegraf
+    volumes:
+      - /:/rootfs:ro
+      - /sys/class/thermal/thermal_zone0/temp:/opt/temp:ro
+    networks:
+      - monitoring
+    environment:
+      USER: ${INFLUX_USER}
+      INFLUX_PASSWORD: ${INFLUX_PASSWORD}
+      HOST_MOUNT_PREFIX: /rootfs
+      HOST_PROC: /rootfs/proc
+      HOST_SYS: /rootfs/sys
+    depends_on:
+      - "influxdb"
+
   domoticz:
-  proxy:
+    image: linuxserver/domoticz
+    volumes:
+      - domoticz_data:/config
+    networks:
+      - service:proxy
+    ports:
+      - "6144:6144"
+      - "1443:1443"
+    environment:
+      TZ: "Europe/Warsaw"
+    depends_on:
+      - "proxy"
+
+networks:
+  monitoring:
+    internal: true
+
+volumes:
+  domoticz_data:
+  portainer_data:
