--- a/dockerfiles/nginx.conf
+++ b/dockerfiles/nginx.conf
@@ -26,7 +26,9 @@ http {
     add_header Strict-Transport-Security max-age=31536000;
 
     location /transmission {
-      proxy_pass http://transmission:9091;
+      resolver 127.0.0.11 valid=30s; # Docker DNS resolver
+      set $upstream_t transmission;
+      proxy_pass http://$upstream_t:9091;
       proxy_set_header Host $http_host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
