youtube material dl

--- a/dockerfiles/telegraf.conf
+++ b/dockerfiles/telegraf.conf
@@ -13,9 +13,9 @@
 [[outputs.influxdb]]
   urls = ["http://localhost:8086"]
   skip_database_creation = true
-  username = "${USER}"
-  password = "${INFLUX_PASSWORD}"
-  database = "db0"
+  username = "${INFLUXDB_WRITE_USER}"
+  password = "${INFLUXDB_WRITE_PASS}"
+  database = "${INFLUX_DB_NAME}"
 
 [[inputs.cpu]]
   percpu = true
