--- a/dockerfiles/docker-compose.yml
+++ b/dockerfiles/docker-compose.yml
@@ -26,18 +26,6 @@ services:
     restart: unless-stopped
     command: random
 
-  proxy:
-    image: pakalucki/proxy:latest
-    ports:
-      - "8443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    links:
-      - "nordvpn:transmission"
-    restart: unless-stopped
-    depends_on:
-      - "transmission"
-
   transmission:
     image: linuxserver/transmission:arm32v7-latest
     volumes:
@@ -52,3 +40,65 @@ services:
     restart: unless-stopped
     depends_on:
       - "nordvpn"
+
+  # influxdb:
+  #   image: influxdb:1.8.2
+  #   volumes:
+  #     - /var/lib/influxdb
+  #     - ./influxdb/influxdb.conf:/etc/influxdb/influxdb.conf:ro
+  #     - ./influxdb/01_retention_policy.iql:/docker-entrypoint-initdb.d/01_retention_policy.iql:ro
+  #   environment:
+  #     INFLUXDB_DB: ${INFLUX_DB_NAME}
+  #     INFLUXDB_ADMIN_USER: ${INFLUXDB_ADMIN_USER}
+  #     INFLUXDB_ADMIN_PASSWORD: ${INFLUXDB_ADMIN_PASS}
+  #     INFLUXDB_READ_USER: ${INFLUXDB_READ_USER}
+  #     INFLUXDB_READ_USER_PASSWORD: ${INFLUXDB_READ_PASS}
+  #     INFLUXDB_WRITE_USER: ${INFLUXDB_WRITE_USER}
+  #     INFLUXDB_WRITE_USER_PASSWORD: ${INFLUXDB_WRITE_PASS}
+  #     INFLUXDB_CONFIG_PATH: /etc/influxdb/influxdb.conf
+  #   restart: unless-stopped
+
+  # telegraf:
+  #   image: telegraf
+  #   volumes:
+  #       - ./telegraf.conf:/etc/telegraf/telegraf.conf
+  #   restart: unless-stopped
+
+  # grafana:
+  #   image: grafana/grafana
+  #   volumes:
+  #       - grafana_storage:/var/lib/grafana
+  #   restart: unless-stopped
+
+  portainer:
+    image: portainer/portainer-ce:alpine
+    volumes:
+        - /var/run/docker.sock:/var/run/docker.sock:ro
+        - /data
+    restart: unless-stopped
+
+  proxy:
+    image: pakalucki/proxy:latest
+    ports:
+      - "8443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    links:
+      - "nordvpn:transmission"
+      - portainer
+    restart: unless-stopped
+
+
+  ytdl_material:
+      environment:
+          ALLOW_CONFIG_MUTATIONS: 'true'
+      restart: always
+      volumes:
+          - /mnt/natec/public/youtube/appdata:/app/appdata
+          - /mnt/natec/public/youtube/audio:/app/audio
+          - /mnt/natec/public/youtube/video:/app/video
+          - /mnt/natec/public/youtube/subscriptions:/app/subscriptions
+          - /mnt/natec/public/youtube/users:/app/users
+      ports:
+          - "8998:17442"
+      image: tzahi12345/youtubedl-material:nightly
