--- a/dockerfiles/nginx.conf
+++ b/dockerfiles/nginx.conf
@@ -34,7 +34,32 @@ http {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
 
-      # HTTP 1.1 support
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
+    }
+
+    location /portainer {
+      resolver 127.0.0.11 valid=30s;
+      set $upstream_p portainer;
+      proxy_pass http://$upstream_p:9001;
+      proxy_set_header Host $http_host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
+    }
+
+    location /youtube {
+      resolver 127.0.0.11 valid=30s;
+      set $upstream_p portainer;
+      proxy_pass http://$upstream_p:8998;
+      proxy_set_header Host $http_host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+
       proxy_http_version 1.1;
       proxy_set_header Connection "";
     }
