--- a/dockerfiles/nginx.conf
+++ b/dockerfiles/nginx.conf
@@ -53,7 +53,7 @@ http {
 
     location /youtube {
       resolver 127.0.0.11 valid=30s;
-      set $upstream_p portainer;
+      set $upstream_p youtube;
       proxy_pass http://$upstream_p:8998;
       proxy_set_header Host $http_host;
       proxy_set_header X-Real-IP $remote_addr;
