--- a/dockerfiles/docker-compose.yml
+++ b/dockerfiles/docker-compose.yml
@@ -85,7 +85,7 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     links:
       - "nordvpn:transmission"
-      - portainer
+      # - portainer
       - ytdl_material
     restart: unless-stopped
     depends_on:
