--- a/dockerfiles/nginx.conf
+++ b/dockerfiles/nginx.conf
@@ -54,6 +54,7 @@ http {
     location /youtube {
       resolver 127.0.0.11 valid=30s;
       set $upstream_p youtube;
+      rewrite /youtube/(.*) /  break;
       proxy_pass http://$upstream_p:17442;
       proxy_set_header Host $http_host;
       proxy_set_header X-Real-IP $remote_addr;
