youtube material dl

--- a/dockerfiles/nginx.conf
+++ b/dockerfiles/nginx.conf
@@ -51,7 +51,12 @@ http {
     #   proxy_set_header Connection "";
     # }
 
-    location /youtube {
+    ### TODO meh https://github.com/Tzahi12345/YoutubeDL-Material/wiki/Reverse-Proxy-Setup
+    location / {
+      proxy_pass http://youtube:17442;
+    }
+
+    location /youtube(.*)$  {
       resolver 127.0.0.11 valid=30s;
       set $upstream_p youtube;
       rewrite /youtube/(.*) /  break;
